[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/userInerface/InGameUI/ButtonBar.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/droid-sans/DroidSans.tres" type="DynamicFont" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Pribambas [by Misha Panfilov].ttf"

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = SubResource( 1 )

[node name="ButtonBar" type="Panel"]
margin_right = 600.0
margin_bottom = 24.0
rect_min_size = Vector2( 600, 24 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 24 )

[node name="Stat" type="Button" parent="HBoxContainer"]
margin_right = 43.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 22 )
custom_fonts/font = SubResource( 2 )
text = "stats"
icon_align = 1

[node name="Skill" type="Button" parent="HBoxContainer"]
margin_left = 47.0
margin_right = 93.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 22 )
custom_fonts/font = SubResource( 2 )
text = "skills"
icon_align = 1

[node name="Inventory" type="Button" parent="HBoxContainer"]
margin_left = 97.0
margin_right = 164.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 22 )
custom_fonts/font = SubResource( 2 )
text = "inventory"
icon_align = 1

[node name="Equipment" type="Button" parent="HBoxContainer"]
margin_left = 168.0
margin_right = 236.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 22 )
custom_fonts/font = SubResource( 2 )
text = "equipment"
icon_align = 1

[node name="Keybind" type="Button" parent="HBoxContainer"]
margin_left = 240.0
margin_right = 300.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 22 )
custom_fonts/font = SubResource( 2 )
text = "keybinds"
icon_align = 1

[node name="Option" type="Button" parent="HBoxContainer"]
margin_left = 304.0
margin_right = 355.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 20 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "options"
icon_align = 1

[connection signal="pressed" from="HBoxContainer/Stat" to="." method="_on_Stat_pressed"]
[connection signal="pressed" from="HBoxContainer/Skill" to="." method="_on_Skill_pressed"]
[connection signal="pressed" from="HBoxContainer/Inventory" to="." method="_on_Inventory_pressed"]
[connection signal="pressed" from="HBoxContainer/Equipment" to="." method="_on_Equipment_pressed"]
[connection signal="pressed" from="HBoxContainer/Keybind" to="." method="_on_Keybind_pressed"]
[connection signal="pressed" from="HBoxContainer/Option" to="." method="_on_Option_pressed"]
